--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~50.0.7",
     "expo-font": "~11.10.3",
     "expo-location": "~16.5.3",
+    "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
