--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
