--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-location": "~16.5.3",
     "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-dropdown-picker": "^5.4.6",
