--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-user-avatar": "^1.0.8",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-virtualized-view": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
