--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
-    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~50.0.7",
     "expo-font": "~11.10.3",
     "expo-location": "~16.5.3",
@@ -24,6 +23,7 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-config": "^1.5.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-slider-box": "^2.0.7",
@@ -32,12 +32,10 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-user-avatar": "^1.0.8",
-    "react-native-vector-icons": "^10.0.3",
-    "react-native-virtualized-view": "^1.0.0"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "react-native-dotenv": "^3.4.10"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
