--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@gorhom/bottom-sheet": "^4.6.1",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/bottom-tabs": "^6.5.12",
@@ -17,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.18",
     "expo": "~50.0.7",
     "expo-font": "~11.10.3",
+    "expo-linear-gradient": "~12.7.2",
     "expo-location": "~16.5.3",
     "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
@@ -25,15 +27,17 @@
     "react-native": "0.73.4",
     "react-native-config": "^1.5.1",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-maps": "^1.11.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-user-avatar": "^1.0.8",
-    "react-native-vector-icons": "^10.0.3",
-    "expo-linear-gradient": "~12.7.2"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
