--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-maps": "^1.11.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
